- MedicalExpensesHospitalType (Added)
- OfferCustomerType (Changed)
    - UVGRiskNo is now mandatory
    - Added property "SUVACompany"
- OfferDSBType (Changed)
    - renamed property "fixedPayrolls" to "personMentionedByName"
    - Added mandatory property "riskCharacteristic" (moved from CompanyCustomerType)
- OfferNlpiConclusionDecisionDataType (Changed)
    - Added mandatory constants processName, subProcessName and processVersion
- OfferNlpiDataType (Changed)
    - Added mandatory constants processName, subProcessName and processVersion
    - Added mandatory property "insurerContact"
    - Added property "combinationMeta"
- OfferNlpiFeedbackDataType (Changed)
    - Added mandatory constants processName, subProcessName and processVersion
- OfferNlpiRequestDataType (Changed)
    - added attribute "brokerContact" (moved to BrokerType)
    - "offerToDate" renamed to "offerDeadline" and now mandatory
    - Added mandatory constants processName, subProcessName and processVersion
    - Added property "combinationMeta"
    - Property "offerLanguage" is now mandatory
    - removed property "previousInsurer" (moved into DSB, UVGCompulsory, UVGSupplement)
    - removed property "UVGCompulsoryInsurer"
    - added property "uploadLink"
- OfferRequestDSBType
    - added mandatory property "previousInsurer" (moved from OfferNlpiRequestDataType)
    - Added mandatory property "riskCharacteristic" (moved from CompanyCustomerType)
    - renamed property "fixedPayrolls" to "personMentionedByName"
- OfferRequestUVGOType (Changed)
    - removed max size restriction for voluntarilyInsuredPersons
    - replaced valid enum values for property "role" in "voluntarilyInsuredPersons"
    - renamed property "voluntarilyInsuredPersons" to "personMentionedByName"
    - removed property "personsConnectionEmployer"
    - added mandatory property "previousInsurer" (moved from OfferNlpiRequestDataType)
    - Added mandatory property "riskCharacteristic" (moved from CompanyCustomerType)